--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             }
           });
         </script>
-      <link rel="preload" href="./bio_files/img_8884_(2).jpg" as="image">
+      <link rel="preload" href="./img_8884_(2).jpg" as="image">
 
   <link rel="preload" as="style" href="./bio_files/css2(1)">
   <link rel="stylesheet" href="./bio_files/css2(1)">
